<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="homework04.homework04.DirectionsActivity">

    <!--Instructions at the top of app-->
    <TextView
        android:id="@+id/dir_instruc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/dir_instructions"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <!--Text input for address-->
    <EditText
        android:id="@+id/dir_addr_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dir_instruc"
        android:hint="@string/dir_input_origin"/>

    <!--Text input 2 for address 2-->
    <EditText
        android:id="@+id/dir_addr_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dir_addr_1"
        android:hint="@string/dir_input_destination"/>

    <!--Submit button-->
    <Button
        android:id="@+id/dir_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dir_addr_2"
        android:text="@string/submit"/>

</RelativeLayout>
